# meta-model-cookbook

./: .gitignore  CONTRIBUTING.md  README.md
02_agent_patterns/01_agent_loop_basics/agent-loop-target/: README.md  pyproject.toml
02_agent_patterns/01_agent_loop_basics/agent-loop-target/agent_loop_target/: __init__.py  async_counter.py  grades.py  normalize.py  pagination.py  weather.py
02_agent_patterns/01_agent_loop_basics/agent-loop-target/go-example/: README.md  async_counter.go  async_counter_test.go  go.mod  grades.go  grades_test.go  normalize.go  normalize_test.go  pagination.go  pagination_test.go  weather.go  weather_test.go
02_agent_patterns/01_agent_loop_basics/agent-loop-target/tests/: test_async_counter.py  test_grades.py  test_normalize.py  test_pagination.py  test_weather.py
03_use_cases/: README.md
03_use_cases/13_macos_cua/python/: README.md  pyproject.toml
03_use_cases/13_macos_cua/python/metacua/: __init__.py  __main__.py  agent.py  app_control.py  args.py  bash_tool.py  commands.py  computer_actions.py  config.py  demo.py  errors.py  key_names.py  keyboard.py  letterbox.py  llm.py  manipulation.py  mouse.py  muse_spark.py  osworld.py  overlay.py  permissions.py  pointer.py  screenshot.py  session_store.py  slash_commands.py  system_prompt.py  terminal_attention.py  terminal_state.py  terminal_ui.py
03_use_cases/13_macos_cua/python/tests/: test_args.py  test_computer_actions.py  test_config.py  test_imports.py  test_key_names.py  test_keyboard.py  test_letterbox.py  test_llm_tools.py  test_llm_trim.py  test_osworld_parse.py  test_session_store.py  test_system_prompt.py  test_terminal_state.py
(+172 files in other folders)
